# supermarket

./: .env  .rustfmt.toml  Cargo.toml  TZ.md
backend/: .env  Cargo.toml
backend/migrations/: 20210518115553_create_tables.sql  20210602153752_add_salt.sql  20210604120857_change_salt_column_type.sql
backend/src/: lib.rs  main.rs
backend/tests/: create_user  front_requests.rs
deploy/postgres/: pg_secret.yaml
frontend/: README.md  addCategory.html  addClient_card.html  addEmployee.html  addManufacturer.html  addOwnedProduct.html  addProduct.html  addReceipt.html  addReturnAgreement.html  addUser.html  addWaybill.html  adders.html  colors.txt  deleteCard.html  deleteCat.html  deleteEmployee.html  deleteManufacturer.html  deleteOProd.html  deleteProd.html  deleteRAgree.html  deleteReceipt.html  deleteWaybill.html  deleters.html  index.html  login.html  showCategory.html  showClientCard.html  showEmployee.html  showManufacturer.html  showOwnedProduct.html  showProduct.html  showReceipt.html  showReturnAgreement.html  showSale.html  showUsers.html  showWaybill.html  updateCard.html  updateCategory.html  updateEmpl.html  updateManufac.html  (+7 more)
frontend/css/: jsgrid-theme.css  styles.css  text-wrap.css
frontend/js/: addSale.js  convertToCSVAndDownload.js  createCategory.js  createClientCard.js  createEmployee.js  createManufacturer.js  createOwnedProduct.js  createProduct.js  (+44 more)
migrations/: 20210518120330_change_user_role_column_type.sql
sql/: add_user.sql  create_employee.sql  get_user.sql
src/: lib.rs  main.rs
tests/: front_requests.rs  jwt.rs  lib.rs  sql_tests
(+69 files in other folders)
