[package]
name = "supermarket-management-system"
version = "0.1.0"
authors = ["armyhaylenko <armyhaylenko@gmail.com>"]
edition = "2018"
include = ["src/**/*"]


[dependencies]
actix-web = "4.0.0-beta.6"
env_logger = "0.8"
config = "0.11"
dotenv = "0.15"
eyre = "0.6"
color-eyre = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
sqlx = { version = "0.5", default-features = false, features = ["macros", "postgres", "uuid", "chrono", "runtime-tokio-rustls"]}
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.13"
validator_derive = "0.13"
jsonwebtoken = "7"
argonautica = { version = "0.2", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }

[dev-dependencies]
libc = "0.2"
